Fix hw tut 1 Signed-off-by: phamkhuetu <phamkhuetu@gmail.com>

--- a/Tut01/index.html
+++ b/Tut01/index.html
@@ -23,7 +23,7 @@
     <p>It may surprise some that back in late 1995, Netscape — which now plays a distant second to the King Kong of browsers, Internet Explorer — was the dominant browser on the market. </p>
     <p>In fact, Netscape was the first browser to support Javascript, animated gifs and HTML frames.</p>
     <p> <blockquote> Thus began the so-called browser wars and, along with seeing who could implement more <i>bells and whistles</i> than the other guy, browser makers also began inventing proprietary HTML elements that only worked with their browsers. </blockquote> </p>
-    <p> <blockquote>Some examples of these are the < marquee >...< /marquee > tags (scrolling text) which originally only worked with Internet Explorer and the < blink >...< /blink > tags (blinking text) which still only works with Gecko-based browsers such as Firefox.
+    <p> <blockquote>Some examples of these are the &lt;marquee&gt;...&lt;/marquee&gt; tags (scrolling text) which originally only worked with Internet Explorer and the &lt;blink&gt;...&lt;/blink&gt; tags (blinking text) which still only works with Gecko-based browsers such as Firefox.
     </blockquote></p>
     <h3>Bad Grammar</h3>
     <p>As the World Wide Web approached adulthood hosting a wide variety of would-be and professional web page authors, it became increasingly apparent that cyberspace was filling up with a lot of badly written HTML. </p>
